--- a/package.json
+++ b/package.json
@@ -2,14 +2,21 @@
   "name": "react-very-basic-shop-from-scratch",
   "version": "1.0.0",
   "description": "",
-  "keywords": [],
+  "keywords": ["reast shop", "react very basic shop form scratch"],
   "main": "src/index.js",
+  "private": false,
   "dependencies": {
-    "bootstrap": "latest",
-    "react": "16.12.0",
     "react-bootstrap": "1.0.1",
-    "react-dom": "16.12.0",
-    "react-scripts": "3.0.1"
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1",
+    "bootstrap": "^4.4.1",
+    "node-sass": "^4.13.1",
+    "prop-types": "^15.7.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.4.1"
   },
   "devDependencies": {
     "typescript": "3.8.3"
@@ -20,10 +27,19 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
